gcc/testsuite/gm2/errors/fail/testnil.mod
MODULE testnil ;

VAR
   c: CARDINAL ;
BEGIN
   c := NIL
END testnil.